fix compile issue